--- a/AKARIPUZZLEFP2/AKARIPUZZLEFP2.vcxproj
+++ b/AKARIPUZZLEFP2/AKARIPUZZLEFP2.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="celda.h" />
+    <ClInclude Include="colors.h" />
     <ClInclude Include="juego.h" />
     <ClInclude Include="tablero.h" />
   </ItemGroup>
