--- a/AKARIPUZZLEFP2/AKARIPUZZLEFP2.vcxproj.filters
+++ b/AKARIPUZZLEFP2/AKARIPUZZLEFP2.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="tablero.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="colors.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="celda.cpp">
